Updated index.html and style.css : 1. class name inside <h1>, <h2> and <p> element changed to video-heading, heading-sub and detail-heading in order to ensure same naming pattern is followed throughout the page for better redability. 2.  changed background color of Navbar to #003839, changed background of video-overlay class to #0c3d9675, changed color of nav-link class to #ffffff and #DC143C while hovering over 3. updated font size of video-heading class to 2em and video-heading-sub class to 1.25em and added 4% padding-bottom to create some whitespace below text.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,6 @@
     #scrollToTop{
         position: fixed;
         width: 40px;
-        /* -moz-transform: rotate(360deg);
-        -webkit-transform: rotate(360deg);
-        -o-transform: rotate(360deg);
-        -ms-transform: rotate(360deg); */
         bottom: 27px;
         right: 0;
         background-color: rgb(195 171 171 / 0%);
@@ -101,18 +97,27 @@
 }
     /*----------------Navbar------------------------*/
     .bg-light {
-    background-color: #254c54 !important;
+    background-color:  #003893 !important;
     z-index: 2;
     }
 
     .navbar-light .navbar-nav .nav-link {
-        color: #00050a;
+        color: #ffffff;
         font-size: 1.5em;
         margin-left: 0.75em;
     }
 
+    .navbar-light .navbar-nav .nav-link:hover{
+        color: #DC143C;
+        font-weight: bold;
+    }
+
     .navbar-light .navbar-nav .active .nav-link {
-    color: #000000;
+    color:  #ffffff;
+    }
+
+ .navbar-light .navbar-nav .active .nav-link:hover {
+    color: #DC143C;
     }
 
     #logo{
@@ -145,7 +150,7 @@
         height: 105vh;
         width: 100vw;
         position: absolute;
-        background: #184d47;
+        background: #0c3d9675;
         z-index: 1;
         opacity: 0.85;
     }
@@ -160,16 +165,16 @@
         transform: translate(-50%, -50%);
     }
 
-    .header-content h1{
-        font-size: 50px;
-        margin-bottom: 0;
+
+    .video-heading{
+        font-size: 2em;
     }
 
-    .header-content p{
-        font-size: 1.5rem;
-        display: block;
-        padding-bottom: 2rem;
+    .video-heading-sub{
+        font-size: 1.25em;
+        padding-bottom: 4%;
     }
+
     /*------------------Information Page------------------*/
 
 
